--- a/project/core/templates/core/includes/generic_formset.html
+++ b/project/core/templates/core/includes/generic_formset.html
@@ -1,6 +1,6 @@
 {% load crispy_forms_tags %}{% load i18n %}
 
-<form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}"
+<form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ form_action }}"
     autocomplete="off" tabindex="-1" data-update-container="{{ update_container }}">
     {% csrf_token %}
     {{ formset.management_form|crispy }}
