forgot to translate

--- a/project/savings/templates/savings/index.html
+++ b/project/savings/templates/savings/index.html
@@ -15,7 +15,7 @@
         <!-- Funds -->
         <div class="row my-2">
             <div class="col">
-                <h6>Fondai</h6>
+                <h6>{% translate 'Funds' %}</h6>
             </div>
             <div class="col text-end">
                 <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_savings }}"><i class="bi bi-plus"></i> Įrašą</button>
