--- a/project/savings/templates/savings/includes/savings_type_list.html
+++ b/project/savings/templates/savings/includes/savings_type_list.html
@@ -1,8 +1,10 @@
+{% load i18n %}
+
 <div class="accordion" id="accordion">
     <div class="accordion-item">
         <div class="accordion-header" id="heading_1">
             <button class="accordion-button collapsed btn-sm rounded-top" type="button" data-bs-toggle="collapse"
-                data-bs-target="#collapse_1" aria-expanded="false" aria-controls="collapse_1">Fondai</button>
+                data-bs-target="#collapse_1" aria-expanded="false" aria-controls="collapse_1">{% translate 'Funds' %}</button>
         </div>
         <div id="collapse_1" class="accordion-collapse collapse show" aria-labelledby="heading_1"
             data-bs-parent="#accordion">
