forgot to translate

--- a/project/pensions/templates/pensions/includes/pensions_type_form.html
+++ b/project/pensions/templates/pensions/includes/pensions_type_form.html
@@ -1,2 +1,4 @@
 {% load form %}
-{% generic_form title='Pensijų fondai' update_container='pension-categories' %}
+{% load i18n %}
+
+{% generic_form title=_('Pension') update_container='pension-categories' %}
