--- a/project/pensions/templates/pensions/includes/pensions_delete_form.html
+++ b/project/pensions/templates/pensions/includes/pensions_delete_form.html
@@ -1,2 +1,4 @@
 {% load form %}
-{% generic_delete_form title='Pensijos trinimas' update_container='pension-content' %}
+{% load i18n %}
+
+{% generic_delete_form title=_('Delete pension') update_container='pension-content' %}
