--- a/project/pensions/templates/pensions/includes/pensions_list.html
+++ b/project/pensions/templates/pensions/includes/pensions_list.html
@@ -5,11 +5,11 @@
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
-            <th>Data</th>
-            <th>Pesijų fondas</th>
-            <th>Pastaba</th>
-            <th class="text-end">Suma</th>
-            <th class="text-end">Mokestis</th>
+            <th>{% translate 'Date' %}</th>
+            <th>{% translate 'Fund' %}</th>
+            <th>{% translate 'Remark' %}</th>
+            <th class="text-end">{% translate 'Sum' %}</th>
+            <th class="text-end">{% translate 'Fees' %}</th>
             <th colspan="2"></th>
         </tr>
     </thead>
@@ -24,10 +24,10 @@
             <td>{{ item.price|default_if_none:'-'|intcomma }}</td>
             <td>{{ item.fee|default_if_none:'-'|intcomma }}</td>
             <td class="w-edit">
-                <a role="button" data-url="{{ url_update }}" class=" js-create edit" title="Edit"><i class="bi bi-pencil-fill"></i></a>
+                <a role="button" data-url="{{ url_update }}" class=" js-create edit" title="{% translate 'Edit' %}"><i class="bi bi-pencil-fill"></i></a>
             </td>
             <td class="w-delete">
-                <a role="button" data-url="{{ url_delete }}" class="js-delete trash" title="Delete"><i class="bi bi-trash-fill"></i></a>
+                <a role="button" data-url="{{ url_delete }}" class="js-delete trash" title="{% translate 'Delete' %}"><i class="bi bi-trash-fill"></i></a>
             </td>
         </tr>
         {% endfor %}
