--- a/project/savings/templates/savings/includes/savings_delete_form.html
+++ b/project/savings/templates/savings/includes/savings_delete_form.html
@@ -1,2 +1,4 @@
 {% load form %}
-{% generic_delete_form title='Taupymo trinimas' update_container='ajax-content' %}
+{% load i18n %}
+
+{% generic_delete_form title=_('Delete savings') update_container='ajax-content' %}
