--- a/project/savings/templates/savings/includes/savings_form.html
+++ b/project/savings/templates/savings/includes/savings_form.html
@@ -1,4 +1,7 @@
-{% load form %}{% load static %}
-{% generic_form title='Taupymas' update_container='ajax-content' %}
+{% load form %}
+{% load static %}
+{% load i18n %}
+
+{% generic_form title=_('Savings') update_container='ajax-content' %}
 
 <script src="{% static 'js/alter_price.js' %}"></script>
