--- a/project/savings/templates/savings/includes/savings_type_form.html
+++ b/project/savings/templates/savings/includes/savings_type_form.html
@@ -1,2 +1,4 @@
 {% load form %}
-{% generic_form title='Fondas' update_container='ajax-content-categories' %}
+{% load i18n %}
+
+{% generic_form title=_('Fund') update_container='ajax-content-categories' %}
