--- a/project/users/templates/users/settings_index.html
+++ b/project/users/templates/users/settings_index.html
@@ -22,6 +22,15 @@
 <div class="row">
     <div class="col">
         <div class="row settings_row">
+            <div class="col">
+                <h6 class="pb-2">Svetainės nustatytmai</h6>
+            </div>
+        </div>
+        <div id="journal_ajax" class="mt-3">{{ settings_journal }}</div>
+    </div>
+
+    <div class="col">
+        <div class="row settings_row">
             <div class="col"><h6 class="pb-2">Users</h6></div>
             <div class="col text-end pe-0 me-2"><a role="button" class="btn btn-sm btn-primary js-invite" data-url="{% url 'users:invite' %}">Sent invite link</a></div>
         </div>
@@ -32,33 +41,36 @@
         <div class="row settings_row">
             <div class="col"><h6 class="pb-2">Nebūtinos išlaidos</h6></div>
         </div>
-        <div id="unnecessary_ajax" class="mt-3">{{ unnecessary }}</div>
+        <div id="unnecessary_ajax" class="mt-3">{{ settings_unnecessary }}</div>
     </div>
 </div>
 
 <script>
     $(function () {
         var unnecesaryForm = function (event) {
-            var form = $('.js_unnecessary_form');
-            var ajax_update_container = 'unnecessary_ajax'
+            var form_name = $(this).data('form')
+            var form = $('.js_' + form_name);
+            var ajax_update_container = form.attr('data-update-container')
 
             $.ajax({
-                url: "{% url 'users:settings_unnecessary' %}",
-                data: new FormData($('.js_unnecessary_form')[0]), // The form with the file inputs.
+                url: form.attr("action"),
+                data: new FormData($('.js_' + form_name)[0]), // The form with the file inputs.
                 processData: false,
                 contentType: false,
                 type: form.attr("method"),
                 dataType: 'json',
                 success: function (data) {
                     $(`#${ajax_update_container}`).html(data.html_form);
+
+                    if (data.redirect) {
+                        window.location.replace(data.redirect);
+                    }
                 }
             });
-            return false;
-        };
+s        };
 
         /* Binding */
-        $(document).on('click', '#unnecessary_submit', unnecesaryForm);
+        $(document).on('click', '#settings_submit', unnecesaryForm);
     });
-
 </script>
 {% endblock content %}
