--- a/project/users/templates/users/password_reset_complete.html
+++ b/project/users/templates/users/password_reset_complete.html
@@ -1,13 +1,12 @@
 {% extends 'users/users_base.html' %}
+{% load i18n %}
 
 {% block content %}
 <div class="card my-auto">
     <div class="card-body">
-        <h3 class="card-title">Password changed!</h3>
-        <div class="alert alert-success" role="alert">
-            You have successfully changed your password! You may now proceed to log in.
-        </div>
-        <a href="{% url 'users:login' %}" class="btn btn-secondary btn-sm">Return to log in</a>
+        <h3 class="card-title">{% translate 'Password changed!' %}</h3>
+        <div class="alert alert-success" role="alert">{% translate 'You have successfully changed your password! You may now proceed to log in.' %} </div>
+        <a href="{% url 'users:login' %}" class="btn btn-secondary btn-sm">{% translate 'Return to Log in' %}</a>
     </div>
 </div>
 {% endblock %}
