--- a/project/users/templates/users/includes/users_lists.html
+++ b/project/users/templates/users/includes/users_lists.html
@@ -1,11 +1,12 @@
 {% if items %}
+{% load i18n %}
 
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
-            <th>User</th>
-            <th>Email</th>
-            <th class="text-center">Admin</th>
+            <th>{% translate 'User' %}</th>
+            <th>{% translate 'Email' %}</th>
+            <th class="text-center">{% translate 'Admin' %}</th>
             <th></th>
         </tr>
     </thead>
@@ -17,7 +18,7 @@
             <td class="text-start">{{ item.email }}</td>
             <td class="text-center">{% if item.is_superuser %}<i class="bi bi-check-circle" style="color: #198754;"></i>{% else %}<i class="bi bi-dash-circle-fill" style="color: #dc3545;"></i>{% endif %}</td>
             <td class="w-delete">
-                <a role="button" data-url="{{ url_delete }}" class="js-delete trash" title="Delete"><i class="bi bi-trash-fill"></i></a>
+                <a role="button" data-url="{{ url_delete }}" class="js-delete trash" title="{% translate 'Delete' %}"><i class="bi bi-trash-fill"></i></a>
             </td>
         </tr>
         {% endfor %}
@@ -26,8 +27,6 @@
 
 {% else %}
 
-<div class="mx-auto text-center alert alert-warning py-2">
-    There are no additional users.
-</div>
+<div class="mx-auto text-center alert alert-warning py-2">{% translate 'There are no additional users.' %}</div>
 
 {% endif %}
