--- a/project/users/templates/users/password_change_done.html
+++ b/project/users/templates/users/password_change_done.html
@@ -1,12 +1,13 @@
 {% extends 'users/users_base.html' %}
+{% load i18n %}
 
 {% block content %}
 <div class="card my-auto">
     <div class="card-body">
         <div class="alert alert-success" role="alert">
-            <strong>Success!</strong> Your password has been changed!
+            <strong>{% translate 'Success!' %}</strong> {% translate 'Your password has been changed!' %}
         </div>
-        <a href="{% url 'bookkeeping:index' %}" class="btn btn-sm btn-secondary">Return to home page</a>
+        <a href="{% url 'bookkeeping:index' %}" class="btn btn-sm btn-secondary">{% translate 'Return to home page' %}</a>
     </div>
 </div>
 {% endblock %}
