--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -22,7 +22,7 @@
 
     {% block head %}{% endblock head %}
 
-    <title>Bookkeeping</title>
+    <title>{{ user.journal.title }}</title>
   </head>
 
   <body>
