expenses/all/ view instead expenses/13/

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -74,7 +74,7 @@
                   <hr class="dropdown-divider">
                 </li>
                 <li>
-                  <a class="dropdown-item btn-sm" href="{% url 'expenses:expenses_month_list' 13 %}">{% translate 'All records' %}</a>
+                  <a class="dropdown-item btn-sm" href="{% url 'expenses:expenses_all' %}">{% translate 'All records' %}</a>
                 </li>
               </ul>
             </div>
