--- a/project/counts/templates/counts/index.html
+++ b/project/counts/templates/counts/index.html
@@ -19,9 +19,11 @@
 
 <div class="row my-2">
     <div class="col-sm-3 text-start">
-        <a href="{% url url_index %}" class="btn btn-sm {% if '/'|add:app_name|add:'/' == request.path %}btn-info{% else %}btn-light{% endif %}">{% translate 'Charts' %}</a>
-        <a href="{% url url_list %}" class="btn btn-sm {% if '/lists/' in request.path %}btn-info{% else %}btn-light{% endif %}">{% translate 'Data' %}</a>
-        <a href="{% url url_history %}" class="btn btn-sm {% if '/history/' in request.path %}btn-info{% else %}btn-light{% endif %}">{% translate 'History' %}</a>
+        {% with view.kwargs.count_type as type %}
+        <a href="{% url 'counts:counts_index' type %}" class="btn btn-sm {% if '/'|add:'counts'|add:'/'|add:type|add:'/' == request.path %}btn-info{% else %}btn-light{% endif %}">{% translate 'Charts' %}</a>
+        <a href="{% url 'counts:counts_list' type %}" class="btn btn-sm {% if '/lists/' in request.path %}btn-info{% else %}btn-light{% endif %}">{% translate 'Data' %}</a>
+        <a href="{% url 'counts:counts_history' type %}" class="btn btn-sm {% if '/history/' in request.path %}btn-info{% else %}btn-light{% endif %}">{% translate 'History' %}</a>
+        {% endwith %}
     </div>
 
     <div class="col text-center" id="info_row">
@@ -29,7 +31,7 @@
     </div>
 
     <div class="col-sm-3 text-end">
-        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{% url url_new %}"><i class="bi bi-plus"></i> {% translate 'Record' context 'record button' %}</button>
+        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{% url 'counts:counts_new' view.kwargs.count_type %}"><i class="bi bi-plus"></i> {% translate 'Record' context 'record button' %}</button>
     </div>
 </div>
 
@@ -65,7 +67,7 @@
 
 <script>
     $(document).on('hidden.bs.modal', '#modal-form', function () {
-        var url = `{% url url_reload %}`;
+        var url = `{% url 'counts:reload_stats' view.kwargs.count_type %}`;
 
         $.ajax({
             url: url,
