--- a/project/counts/templates/counts/index.html
+++ b/project/counts/templates/counts/index.html
@@ -35,7 +35,7 @@
         {% for type in context_count_types %}
         {% if type.slug == view.kwargs.count_type %}
             <button type="button" class="btn btn-sm btn-success js-create" data-url="{% url 'counts:counts_type_update' type.pk %}"><i class="bi bi-pencil-fill me-1"></i> {% translate 'Counter' context 'counter button' %}</button>
-            <button type="button" class="btn btn-sm btn-danger js-delete" data-url="{% url 'counts:counts_type_delete' type.pk %}"><i class="bi bi-trash-fill me-1"></i> {% translate 'Counter' context 'counter button' %}</button>
+            <button type="button" class="btn btn-sm btn-danger js-delete" data-url="{% url 'counts:counts_type_delete' type.pk %}" id="delete_button"><i class="bi bi-trash-fill me-1"></i> {% translate 'Counter' context 'counter button' %}</button>
         {% endif %}
         {% endfor %}
     </div>
@@ -71,21 +71,6 @@
 </div>
 {% endif %}
 
-<script>
-    $(document).on('hidden.bs.modal', '#modal-form', function () {
-        var url = `{% url 'counts:reload_stats' view.kwargs.count_type %}`;
-
-        $.ajax({
-            url: url,
-            data: {
-                'ajax_trigger': '1'
-            },
-            success: function (data) {
-                var blocks = ['info_row', 'chart_weekdays', 'chart_months', 'chart_year', 'chart_histogram', 'chart_calendar_1H', 'chart_calendar_2H'];
-                reload_stats(data, blocks);
-            }
-        });
-    });
-</script>
+{% include 'counts/counts_ajax.html' %}
 
 {% endblock content %}
