--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -139,7 +139,7 @@
 
           <li class="nav-item">
             <div class="btn-group">
-              <a class="btn btn-menu nav-link {% if '/counts/' in request.path %}active{% endif %}" href="{% if context_count_types%}{% url 'counts:counts_index' context_count_types.0.slug %}{% else %}{% url 'counts:counts_index' 'counter' %}{% endif %}">{% translate 'Counter' %}</a>
+              <a class="btn btn-menu nav-link {% if '/counts/' in request.path %}active{% endif %}" href="{% if context_count_types%}{% url 'counts:counts_index' context_count_types.0.slug %}{% else %}{% url 'counts:counts_empty' %}{% endif %}">{% translate 'Counter' %}</a>
               <button type="button" class="btn btn-menu dropdown-toggle dropdown-toggle-split nav-link {% if '/counts/' in request.path %}active{% endif %}"
                 data-bs-toggle="dropdown" aria-expanded="false">
                 <span class="visually-hidden">Toggle Dropdown</span>
