--- a/project/templates/404.html
+++ b/project/templates/404.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>{% load static %}
 <html lang="en-US">
 <head>
-<title>{% translate 'Not Found' %}</title>
+<title>{% translate 'Not found' %}</title>
 
 <meta charset="UTF-8" />
 
