displays a message if the counter has no records

--- a/project/counts/templates/counts/counts_ajax.html
+++ b/project/counts/templates/counts/counts_ajax.html
@@ -15,8 +15,9 @@
                 'ajax_trigger': '1'
             },
             success: function (data) {
-                var blocks = ['info_row', 'chart_weekdays', 'chart_months', 'chart_year', 'chart_histogram', 'chart_calendar_1H', 'chart_calendar_2H'];
+                var blocks = ['info_row', 'chart_weekdays', 'chart_months', 'chart_year', 'chart_histogram', 'chart_calendar_1H', 'chart_calendar_2H', 'no-records'];
                 reload_stats(data, blocks);
+                $('#no-records').html('');
             }
         });
     });
