--- a/project/counts/templates/counts/counts_ajax.html
+++ b/project/counts/templates/counts/counts_ajax.html
@@ -1,11 +1,11 @@
 <script>
     $(document).on('hidden.bs.modal', '#modal-form', function () {
-        var url = `{% url 'counts:reload_stats' count_type %}`;
+        var url = `{% url 'counts:reload_stats' count_type_object.slug %}`;
         var form = document.getElementById('js-form');
         var action = form.action;
 
         if (action.includes('type')) {
-            window.location.replace(`{% url 'counts:counts_redirect' count_id %}`);
+            window.location.replace(`{% url 'counts:counts_redirect' count_type_object.pk %}`);
             return;
         }
 
