--- a/project/counts/templates/counts/index.html
+++ b/project/counts/templates/counts/index.html
@@ -27,7 +27,11 @@
     </div>
 
     <div class="col text-center" id="info_row">
-        {% if tab == 'index' or tab == 'data' %}{{ info_row }}{% endif %}
+        {% if tab == 'index' or tab == 'data' %}
+            {{ info_row }}
+        {% else %}
+            <div class="info_row"><h6>{% translate 'Historical data' %}</h6></div>
+        {% endif %}
     </div>
 
     <div class="col-sm-3 text-end">
@@ -42,7 +46,10 @@
 </div>
 
 {% if tab == 'index' %}
-<div class="row">
+
+{% if not records %}<div id="no-records">{% include 'core/no_records.html' %}</div>{% endif %}
+
+<div class="row my-2">
     <div class="col-lg-4" id="chart_weekdays">{% if records %}{{ chart_weekdays }}{% endif %}</div>
     <div class="col-lg-4" id="chart_months">{% if records %}{{ chart_months }}{% endif %}</div>
     <div class="col-lg-4" id="chart_histogram">{% if records %}{{ chart_histogram }}{% endif %}</div>
@@ -53,7 +60,6 @@
     <div class="col-lg-6 col-md-12" id="chart_calendar_2H">{% if records %}{{ chart_calendar_2H }}{% endif %}</div>
 </div>
 
-{% if not records %}<div id="no-records">{% include 'core/no_records.html' %}</div>{% endif %}
 {% endif %}
 
 
@@ -65,12 +71,14 @@
 
 
 {% if tab == 'history' %}
+
+{% if not records %}<div id="no-records">{% include 'core/no_records.html' %}</div>{% endif %}
+
 <div class="row my-2">
     <div class="col-lg-4">{% if records %}{{ chart_weekdays }}{% endif %}</div>
     <div class="col-lg-4">{% if records %}{{ chart_years }}{% endif %}</div>
     <div class="col-lg-4">{% if records %}{{ chart_histogram }}{% endif %}</div>
 </div>
-{% if not records %}<div id="no-records">{% include 'core/no_records.html' %}</div>{% endif %}
 {% endif %}
 
 {% include 'counts/counts_ajax.html' %}
