--- a/project/counts/templates/counts/index.html
+++ b/project/counts/templates/counts/index.html
@@ -64,6 +64,9 @@
 
 
 {% if tab == 'data' %}
+
+{% if not records %}<div id="no-records">{% include 'core/no_records.html' %}</div>{% endif %}
+
 <div class="row my-2">
     <div class="col" id="ajax-content">{{ data }}</div>
 </div>
