refactored Lists view

--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -107,7 +107,7 @@
 
 {% if tab == 'data' %}
 <div class="row">
-    <div class="col" id="ajax-content">{{ data }}</div>
+    <div class="col" id="ajax-content">{% include 'drinks/includes/drinks_list.html' %}</div>
 </div>
 {% endif %}
 
