--- a/project/counts/templates/counts/counts_ajax.html
+++ b/project/counts/templates/counts/counts_ajax.html
@@ -15,9 +15,11 @@
                 'ajax_trigger': '1'
             },
             success: function (data) {
+                // delete no records message
+                $('#no-records').html('');
+
                 var blocks = ['info_row', 'chart_weekdays', 'chart_months', 'chart_year', 'chart_histogram', 'chart_calendar_1H', 'chart_calendar_2H', 'no-records'];
                 reload_stats(data, blocks);
-                $('#no-records').html('');
             }
         });
     });
