dont show charts, tables, etc if user has no data

--- a/project/drinks/templates/drinks/includes/drinks_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_list.html
@@ -32,8 +32,6 @@
 
 {% else %}
 
-<div class="mx-auto text-center alert alert-warning py-2">
-    {% blocktranslate with year=request.user.year|title %}No records in <b>{{ year }}</b>.{% endblocktranslate %}
-</div>
+{% include 'core/no_records.html' %}
 
 {% endif %}
