--- a/project/counts/templates/counts/includes/counts_list.html
+++ b/project/counts/templates/counts/includes/counts_list.html
@@ -32,4 +32,8 @@
     </tbody>
 </table>
 
+{% else %}
+
+    {% if not records %}<div id="no-records">{% include 'core/no_records.html' %}</div>{% endif %}
+
 {% endif %}
