--- a/project/counts/templates/counts/index.html
+++ b/project/counts/templates/counts/index.html
@@ -47,7 +47,7 @@
 
 {% if tab == 'index' %}
 
-{% if not records %}<div id="no-records">{% include 'core/no_records.html' %}</div>{% endif %}
+{% if not records %}<div id="no-records"><div class="row my-2"><div class="col">{% include 'core/no_records.html' %}</div></div></div>{% endif %}
 
 <div class="row my-2">
     <div class="col-lg-4" id="chart_weekdays">{% if records %}{{ chart_weekdays }}{% endif %}</div>
@@ -65,8 +65,6 @@
 
 {% if tab == 'data' %}
 
-{% if not records %}<div id="no-records">{% include 'core/no_records.html' %}</div>{% endif %}
-
 <div class="row my-2">
     <div class="col" id="ajax-content">{% include 'counts/includes/counts_list.html' %}</div>
 </div>
@@ -75,7 +73,7 @@
 
 {% if tab == 'history' %}
 
-{% if not records %}<div id="no-records"><div class="mx-auto text-center alert alert-warning py-2 my-4">{% translate 'Data missing.' %}</div>{% endif %}
+{% if not records %}<div id="no-records"><div class="row my-2"><div class="col">{% include 'core/no_records.html' with data_missing=True %}</div></div></div>{% endif %}
 
 <div class="row my-2">
     <div class="col-lg-4">{% if records %}{{ chart_weekdays }}{% endif %}</div>
