--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -39,7 +39,7 @@
 </div>
 
 <div class="row my-2">
-    <div class="col-lg-12" id="chart_readed_books">{{ chart_readed_books }}</div>
+    <div class="col-lg-12" id="chart_readed_books">{% if readed %}{{ chart_readed_books }}{% endif %}</div>
 </div>
 {% endif %}
 
