--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
+{% load static %}
 {% load i18n %}
 
 
 {% block head %}
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
+<script src="{% static 'js/reload_stats.js' %}"></script>
 {% endblock head %}
 
 
@@ -118,14 +120,12 @@
                 'ajax_trigger': '1'
             },
             success: function (data) {
-                var no_incomes = $(data).filter('#no_incomes');
-                $('#no_incomes').html(no_incomes);
-
-                var wealth = $(data).filter('#wealth');
-                $('#wealth').html(wealth);
-
-                var savings = $(data).filter('#saving_worth');
-                $('#saving_worth').html(savings);
+                var blocks = [
+                    'no_incomes',
+                    'wealth',
+                    'saving_worth',
+                ];
+                reload_stats(data, blocks);
             }
         });
     });
