change summary incomes chart title

--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_salary.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_salary.html
@@ -13,7 +13,7 @@
             marginBottom: 67,
         },
         title: {
-            text: '{% translate "Salary" %}',
+            text: '{% translate "Incomes" %}',
         },
         legend: {
             layout: 'horizontal',
