--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_balance.html
@@ -5,12 +5,16 @@
 <div id="container-balance-summary"></div>
 
 <script>
+    $(function () {
+        var categoryLabels = {{ balance_categories }};
+
     Highcharts.setOptions({
         lang: {
             thousandsSep: '.',
             decimalPoint: ',',
         }
     });
+
     Highcharts.chart('container-balance-summary', {
         chart: {
             marginBottom: 67,
@@ -27,13 +31,14 @@
             x: -10,
         },
         xAxis: {
-            min: 0.5,
-            max: {{ balance_cnt|safe }},
+            min: 0.49,
+            max: categoryLabels.length - 1.49,
+            categories: categoryLabels,
+            type: 'category',
             lineColor: '#000',
             lineWidth: 2,
             gridLineWidth: 1,
             tickmarkPlacement: 'on',
-            categories: {{ balance_categories|safe }},
             labels: {
                 style: {
                     fontSize: '10px',
@@ -77,5 +82,6 @@
             {'name': '{% translate "Incomes" %}', 'data': {{ balance_income_data|safe }}, color: '#77933c', 'type': 'area'},
             {'name': '{% translate "Expenses" %}', 'data': {{ balance_expense_data|safe }}, color: '#c0504d', 'type': 'area'},
         ]
+    });
     });
 </script>
