--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_incomes.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_incomes.html
@@ -2,12 +2,16 @@
 
 <div id="container-salary-summary"></div>
 <script>
-    Highcharts.setOptions({
+    $(function () {
+        var categoryLabels = {{ salary_categories }};
+
+        Highcharts.setOptions({
         lang: {
             thousandsSep: '.',
             decimalPoint: ',',
         }
     });
+
     Highcharts.chart('container-salary-summary', {
         chart: {
             marginBottom: 67,
@@ -24,13 +28,14 @@
             x: -10
         },
         xAxis: {
-            min: 0.5,
-            max: {{ salary_cnt|safe }},
+            min: 0.49,
+            max: categoryLabels.length - 1.49,
+            categories: categoryLabels,
+            type: 'category',
             lineColor: '#000',
             lineWidth: 2,
             gridLineWidth: 1,
             tickmarkPlacement: 'on',
-            categories: {{ salary_categories|safe }},
             labels: {
                 style: {
                     fontSize: '10px',
@@ -101,5 +106,6 @@
             color: '#2d5f2e',
         },
         ],
+    });
     });
 </script>
