--- a/project/bookkeeping/templates/bookkeeping/summary.html
+++ b/project/bookkeeping/templates/bookkeeping/summary.html
@@ -6,6 +6,7 @@
 
 {% block content %}
 
+{% if records %}
 <div class="row my-2">
     <div class="col-lg-12">
         {% include 'bookkeeping/includes/chart_summary_balance.html' %}
@@ -17,4 +18,5 @@
         {% include 'bookkeeping/includes/chart_summary_incomes.html' %}
     </div>
 </div>
+{% endif %}
 {% endblock content %}
