--- a/project/bookkeeping/templates/bookkeeping/summary.html
+++ b/project/bookkeeping/templates/bookkeeping/summary.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-{% if records %}
+{% if records > 1 %}
 <div class="row my-2">
     <div class="col-lg-12">
         {% include 'bookkeeping/includes/chart_summary_balance.html' %}
@@ -18,5 +18,8 @@
         {% include 'bookkeeping/includes/chart_summary_incomes.html' %}
     </div>
 </div>
+{% else %}
+{% include 'core/no_records.html' with two_years=True %}
 {% endif %}
+
 {% endblock content %}
