update drinks charts

--- a/project/drinks/templates/drinks/includes/chart_consumption.html
+++ b/project/drinks/templates/drinks/includes/chart_consumption.html
@@ -3,12 +3,16 @@
 
 <div id="chart_consumption_container"></div>
 <script>
+    $(function () {
+        var categoryLabels = {% months %};
+
     Highcharts.setOptions({
         lang: {
             thousandsSep: '.',
             decimalPoint: ',',
         }
     });
+
     Highcharts.chart('chart_consumption_container', {
         chart: {
             height: '350px',
@@ -24,13 +28,14 @@
             borderWidth: 1,
         },
         xAxis: {
-            min: 0.4,
-            max: 10.8,
+            min: 0.49,
+            max: categoryLabels.length - 1.49,
+            categories: categoryLabels,
+            type: 'category',
             lineColor: '#000',
             lineWidth: 2,
             gridLineWidth: 1,
             tickmarkPlacement: 'on',
-            categories: {% months %},
             labels: {
                 style: {
                     fontSize: '10px',
@@ -112,5 +117,6 @@
                 }
             }
         }]
+    });
     });
 </script>
