--- a/project/drinks/templates/drinks/includes/chart_summary.html
+++ b/project/drinks/templates/drinks/includes/chart_summary.html
@@ -3,12 +3,16 @@
 
 <div id="chart_summary_container"></div>
 <script>
+    $(function () {
+        var categoryLabels = {{ drinks_categories }};
+
     Highcharts.setOptions({
         lang: {
             thousandsSep: '.',
             decimalPoint: ',',
         }
     });
+
     Highcharts.chart('chart_summary_container', {
         chart: {
             marginBottom: 67,
@@ -25,13 +29,15 @@
             x: -10,
         },
         xAxis: {
-            min: 0.5,
-            max: {{ drinks_cnt|safe }},
+            min: 0.49,
+            max: categoryLabels.length - 1.49,
+            categories: categoryLabels,
+            type: 'category',
             lineColor: '#000',
             lineWidth: 2,
             gridLineWidth: 1,
             tickmarkPlacement: 'on',
-            categories: {{ drinks_categories|safe }},
+
             labels: {
                 style: {
                     fontSize: '10px',
@@ -115,5 +121,6 @@
             },
             enableMouseTracking: false,
         }],
+    });
     });
 </script>
