summary charts spacingRight

--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_balance.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_balance.html
@@ -17,7 +17,7 @@
 
     Highcharts.chart('container-balance-summary', {
         chart: {
-            marginBottom: 67,
+            spacingRight: 25,
         },
         title: {
             text: '{{ chart_title }}',
