--- a/project/bookkeeping/templates/bookkeeping/includes/chart_summary_incomes.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_summary_incomes.html
@@ -14,7 +14,7 @@
 
     Highcharts.chart('container-salary-summary', {
         chart: {
-            marginBottom: 67,
+            spacingRight: 25,
         },
         title: {
             text: '{% translate "Incomes" %}',
