reload pensions in main page

--- a/project/bookkeeping/templates/bookkeeping/includes/reload_index.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/reload_index.html
@@ -1,5 +1,6 @@
 <div id="no_incomes">{{ no_incomes }}</div>
 <div id="money">{{ money }}</div>
 <div id="wealth">{{ wealth }}</div>
-<div id="saving_worth">{{ savings }}</div>
+<div id="savings_worth">{{ savings }}</div>
+<div id="pensions_worth">{{ pensions }}</div>
 <div id="accounts_worth">{{ accounts }}</div>
