--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -76,12 +76,12 @@
 
 <!-- savings -->
 <div class="row mt-3">
-    <div id="saving_worth" class="col-lg-12">{{ savings }}</div>
+    <div id="savings_worth" class="col-lg-12">{{ savings }}</div>
 </div>
 
 <!-- pensions -->
 <div class="row mt-3">
-    <div id="pension_worth" class="col-lg-12">{{ pensions }}</div>
+    <div id="pensions_worth" class="col-lg-12">{{ pensions }}</div>
 </div>
 
 <script>
@@ -123,7 +123,8 @@
                 var blocks = [
                     'no_incomes',
                     'wealth',
-                    'saving_worth',
+                    'savings_worth',
+                    'pensions_worth',
                 ];
                 reload_stats(data, blocks);
             }
