--- a/project/drinks/templates/drinks/index.html
+++ b/project/drinks/templates/drinks/index.html
@@ -63,7 +63,11 @@
     </div>
 
     <div class="col-lg-6 d-flex">
-        <div class="text-center mx-auto align-self-center"><img src="{% static 'images/drinks_info.jpg' %}" width="500" alt="{% translate 'What is a standard unit of alcohol' %}" class="_hidden" {% if not records %}style="display: none"{% endif %}></div>
+        {% get_current_language as LANGUAGE_CODE %}
+        {% with 'images/drinks_info_'|add:LANGUAGE_CODE|add:'.jpg' as nm %}
+        <div class="text-center mx-auto align-self-center">
+            <img src="{% static nm %}" width="500" alt="{% translate 'What is a standard unit of alcohol' %}" class="_hidden" {% if not records %}style="display: none"{% endif %}>
+        </div>{% endwith %}
     </div>
 </div>
 
